tests/errors/error_type_subtract.nimmy
# Error: Cannot subtract incompatible types
let x = "hello" - 5